syntax = "proto3";

package api;

import "google/protobuf/empty.proto";
import "yandex/cloud/priv/disk_manager/v1/disk.proto";
import "yandex/cloud/priv/operation/operation.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/api";

service PrivateService {
    // Schedules blank (no op) operation, used for testing.
    rpc ScheduleBlankOperation(google.protobuf.Empty) returns (yandex.cloud.priv.operation.Operation);

    rpc RebaseOverlayDisk(RebaseOverlayDiskRequest) returns (yandex.cloud.priv.operation.Operation);

    rpc RetireBaseDisk(RetireBaseDiskRequest) returns (yandex.cloud.priv.operation.Operation);

    rpc RetireBaseDisks(RetireBaseDisksRequest) returns (yandex.cloud.priv.operation.Operation);

    rpc OptimizeBaseDisks(google.protobuf.Empty) returns (yandex.cloud.priv.operation.Operation);

    rpc ConfigurePool(ConfigurePoolRequest) returns (yandex.cloud.priv.operation.Operation);

    rpc DeletePool(DeletePoolRequest) returns (yandex.cloud.priv.operation.Operation);

    // Lists all existing disk ids in specified |folder_id|.
    // Lists all existing disk ids if |folder_id| is not set.
    rpc ListDisks(ListDisksRequest) returns (ListDisksResponse);

    // Lists all existing image ids in specified |folder_id|.
    // Lists all existing image ids if |folder_id| is not set.
    rpc ListImages(ListImagesRequest) returns (ListImagesResponse);

    // Lists all existing snapshot ids in specified |folder_id|.
    // Lists all existing snapshot ids if |folder_id| is not set.
    rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);

    // Lists all existing filesystem ids in specified |folder_id|.
    // Lists all existing filesystem ids if |folder_id| is not set.
    rpc ListFilesystems(ListFilesystemsRequest) returns (ListFilesystemsResponse);

    // Lists all existing placement group ids in specified |folder_id|.
    // Lists all existing placement group ids if |folder_id| is not set.
    rpc ListPlacementGroups(ListPlacementGroupsRequest) returns (ListPlacementGroupsResponse);
}

message RebaseOverlayDiskRequest {
    yandex.cloud.priv.disk_manager.v1.DiskId disk_id = 1;
    string base_disk_id = 4;
    string target_base_disk_id = 2;
    uint64 slot_generation = 3;
}

message RetireBaseDiskRequest {
    string base_disk_id = 1;
    yandex.cloud.priv.disk_manager.v1.DiskId src_disk_id = 2;
    string src_disk_checkpoint_id = 3;
}

message RetireBaseDisksRequest {
    string image_id = 1;
    string zone_id = 2;
    bool use_base_disk_as_src = 3;
}

message ConfigurePoolRequest {
    reserved 3;

    string image_id = 1;
    string zone_id = 2;
    int64 capacity = 4;
    bool use_image_size = 5; // NBS-2005
}

message DeletePoolRequest {
    string image_id = 1;
    string zone_id = 2;
}

message ListDisksRequest {
    string folder_id = 1;
}

message ListDisksResponse {
    repeated string disk_ids = 1;
}

message ListImagesRequest {
    string folder_id = 1;
}

message ListImagesResponse {
    repeated string image_ids = 1;
}

message ListSnapshotsRequest {
    string folder_id = 1;
}

message ListSnapshotsResponse {
    repeated string snapshot_ids = 1;
}

message ListFilesystemsRequest {
    string folder_id = 1;
}

message ListFilesystemsResponse {
    repeated string filesystem_ids = 1;
}

message ListPlacementGroupsRequest {
    string folder_id = 1;
}

message ListPlacementGroupsResponse {
    repeated string placement_group_ids = 1;
}
